Polishing (#24)
* unnecessary annotations remove

* 'RequestMapping' annotation to better represent the semantics of the annotated methods

* Remove unused import

* Change to Unmodifiable list