@@ -28,7 +28,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -46,7 +45,7 @@ public class AdminQueryService {
 
         List<AdminDto> adminDtos = adminPage.getContent().stream()
                 .map(AdminDto::fromAdmin)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(adminDtos, pageable, adminPage.getTotalElements());
     }
