@@ -134,7 +134,7 @@ public class PolicyService {
         List<Policy> policies = policyRepository.findAll(Sort.by(Sort.Direction.DESC, "createdAt"));
         return policies.stream()
                 .map(policy -> convertToPolicyDTO(policy, policy.getPolicyType()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
