@@ -6,7 +6,6 @@ import org.omnione.did.base.db.repository.TransactionRepository;
 import org.omnione.did.base.db.repository.VpSubmitRepository;
 import org.omnione.did.base.exception.ErrorCode;
 import org.omnione.did.base.exception.OpenDidException;
-import org.omnione.did.data.model.vp.VerifiablePresentation;
 import org.omnione.did.verifier.v1.admin.dto.VpSubmitDTO;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -15,7 +14,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -24,13 +22,13 @@ public class VpSubmitQueryService {
     private final TransactionRepository transactionRepository;
 
     public Page<VpSubmitDTO> searchVpSubmitList(String searchKey, String searchValue, Pageable pageable) {
-        Page<VpSubmit> VpSubmitPage = vpSubmitRepository.searchVpSubmitList(searchKey, searchValue, pageable);
+        Page<VpSubmit> vpSubmitPage = vpSubmitRepository.searchVpSubmitList(searchKey, searchValue, pageable);
 
-        List<VpSubmitDTO> VpSubmitDtos = VpSubmitPage.getContent().stream()
+        List<VpSubmitDTO> vpSubmitDtos = vpSubmitPage.getContent().stream()
                 .map(this::convertVpSubmitDTO)
-                .collect(Collectors.toList());
+                .toList();
 
-        return new PageImpl<>(VpSubmitDtos, pageable, VpSubmitPage.getTotalElements());
+        return new PageImpl<>(vpSubmitDtos, pageable, vpSubmitPage.getTotalElements());
     }
     public VpSubmitDTO convertVpSubmitDTO(VpSubmit vpSubmit) {
 
